--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,10 @@ build/Release
 
 # Dependency directories
 node_modules/
+*/node_modules/**/**
 jspm_packages/
-
+node_modules
+./html/home/node_modules/
 # TypeScript v1 declaration files
 typings/
 
