--- a/myProject/life-on-cloud/package.json
+++ b/myProject/life-on-cloud/package.json
@@ -41,7 +41,8 @@
     "qiniu": "^7.3.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "wx-server-sdk": "^2.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
