--- a/myProject/life-on-cloud/package.json
+++ b/myProject/life-on-cloud/package.json
@@ -23,6 +23,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@cloudbase/node-sdk": "^2.5.2",
     "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.3",
