--- a/myProject/life-on-cloud/package.json
+++ b/myProject/life-on-cloud/package.json
@@ -11,7 +11,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest build --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "debug": "nest start --debug --watch",
@@ -39,6 +39,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.4",
     "nestjs-alicloud-oss": "^1.0.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "qiniu": "^7.3.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -47,6 +49,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
     "@types/express": "^4.17.11",
@@ -54,6 +57,7 @@
     "@types/jest": "^26.0.22",
     "@types/mongoose": "^5.10.5",
     "@types/node": "^14.14.36",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
@@ -64,7 +68,6 @@
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
-    "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3"
