--- a/myProject/life-on-cloud/package.json
+++ b/myProject/life-on-cloud/package.json
@@ -30,7 +30,9 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-socket.io": "^7.6.17",
     "@nestjs/swagger": "^4.8.0",
+    "@nestjs/websockets": "^7.6.17",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -40,6 +42,7 @@
     "joi": "^17.4.0",
     "moment": "^2.29.1",
     "mongoose": "^5.12.4",
+    "mqtt": "^4.2.6",
     "nestjs-alicloud-oss": "^1.0.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
