--- a/myProject/chart-home/package.json
+++ b/myProject/chart-home/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.0",
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "mqtt": "^4.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
