--- a/myProject/antd-demo-ts/package.json
+++ b/myProject/antd-demo-ts/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "chat-home",
+  "name": "antd-demo-ts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.16.0",
-    "axios": "^0.21.1",
-    "better-scroll": "^2.3.1",
-    "moment": "^2.29.1",
-    "mqtt": "^4.2.6",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^12.20.13",
+    "@types/react": "^17.0.8",
+    "@types/react-dom": "^17.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
