--- a/myProject/free-core/package.json
+++ b/myProject/free-core/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "chat-home",
+  "name": "free-core",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@better-scroll/core": "^2.3.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-virtualized": "^9.22.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
