--- a/myProject/free-core/package.json
+++ b/myProject/free-core/package.json
@@ -18,7 +18,12 @@
     "react-virtualized": "^9.22.3",
     "web-vitals": "^1.1.2"
   },
+  "devDependencies": {
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "vite": "^2.3.5"
+  },
   "scripts": {
+    "dev": "vite",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
