--- a/myProject/free-core/package.json
+++ b/myProject/free-core/package.json
@@ -14,6 +14,7 @@
     "mqtt": "^4.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-virtualized": "^9.22.3",
     "web-vitals": "^1.1.2"
@@ -23,7 +24,6 @@
     "vite": "^2.3.5"
   },
   "scripts": {
-    "dev": "vite",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
