--- a/myProject/free-core/package.json
+++ b/myProject/free-core/package.json
@@ -7,13 +7,23 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.16.0",
+    "antd": "^4.16.5",
     "axios": "^0.21.1",
+    "babel-plugin-import": "^1.13.3",
     "better-scroll": "^2.3.1",
+    "customize-cra": "^1.0.0",
+    "enquire-js": "^0.2.1",
+    "less": "^4.1.1",
+    "less-loader": "^6.0.0",
     "moment": "^2.29.1",
     "mqtt": "^4.2.6",
+    "rc-queue-anim": "^1.8.5",
+    "rc-scroll-anim": "^2.7.6",
+    "rc-tween-one": "^2.7.3",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-virtualized": "^9.22.3",
@@ -24,8 +34,8 @@
     "vite": "^2.3.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
