--- a/myProject/jiuyou-web/package.json
+++ b/myProject/jiuyou-web/package.json
@@ -1,17 +1,54 @@
 {
-  "version": "0.0.0",
+  "name": "vite-vue2-demo",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "preview": "vite preview --port 8080"
+    "preview": "vite preview --port 8088",
+    "build-cli": "vue-cli-service build",
+    "lint-cli": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "core-js": "^3.6.5",
+    "vant": "^2.12.23",
+    "vite": "^2.4.1",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.4",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.4.0"
-  }
+    "axios": "^0.21.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vite-plugin-style-import": "^1.0.1",
+    "vite-plugin-vue2": "^1.7.2",
+    "vue-template-compiler": "^2.6.11",
+    "vue-virtual-scroller": "^1.0.10"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
