--- a/myProject/hello-jiuyou/package.json
+++ b/myProject/hello-jiuyou/package.json
@@ -9,9 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
+    "vant": "^2.12.23",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-virtual-scroller": "^1.0.10",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
