--- a/myProject/hello-jiuyou/package.json
+++ b/myProject/hello-jiuyou/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hello-jiuyou",
-  "version": "0.1.0",
+  "name": "jiuyou-web",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "vant": "^2.12.23",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.2.3",
     "vue-router": "^3.2.0",
     "vue-virtual-scroller": "^1.0.10",
     "vuex": "^3.4.0"
