--- a/myProject/jiuyou-web/package.json
+++ b/myProject/jiuyou-web/package.json
@@ -1,54 +1,40 @@
 {
-  "name": "vite-vue2-demo",
+  "name": "jiuyou-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
-    "preview": "vite preview --port 8088",
-    "build-cli": "vue-cli-service build",
-    "lint-cli": "vue-cli-service lint"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
     "vant": "^2.12.23",
-    "vite": "^2.4.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.2"
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.2.0",
+    "vue-virtual-scroller": "^1.0.10",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.4",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.5",
-    "axios": "^0.21.1",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vite-plugin-style-import": "^1.0.1",
-    "vite-plugin-vue2": "^1.7.2",
-    "vue-template-compiler": "^2.6.11",
-    "vue-virtual-scroller": "^1.0.10"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
+    "@vue/test-utils": "^1.0.3",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
+    "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "jest": {
+    "preset": "@vue/cli-plugin-unit-jest"
+  }
 }
